<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="66dp"
        android:background="@color/colorWhite"
        android:paddingBottom="10dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingTop="36dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/icon_mobile"
                    android:drawableTint="@color/colorTextLight"
                    android:hint="@string/txt_login_username"
                    android:inputType="text"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColorHint="@color/colorTextLighter"
                    android:textSize="@dimen/txt_large" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableRight="@drawable/icon_lock"
                    android:drawableTint="@color/colorTextLight"
                    android:hint="@string/txt_login_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColorHint="@color/colorTextLighter"
                    android:textSize="@dimen/txt_large" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="18dp"
                android:background="@color/colorPrimary"
                android:text="@string/txt_btn_login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_xlarge" />

            <TextView
                android:id="@+id/tv_login_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:text="@string/txt_forgot_password"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/txt_large" />

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_register"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txt_xlarge" />
        </LinearLayout>

        <!-- We need this loading wheel, only when loading more -->
        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/login_progress_wheel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            wheel:matProg_barColor="@color/colorPrimaryDark"
            wheel:matProg_progressIndeterminate="true" />
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@drawable/icon_lock_big" />


</RelativeLayout>