<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userProfileScrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/colorBG">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/header_image" />

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-55dp"
            android:background="@drawable/profile_circular_border_imageview"
            android:elevation="5dp"
            android:padding="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_user" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="6dp">


            <ImageView
                android:id="@+id/add_friend"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:layout_toLeftOf="@+id/drop_down_option_menu"
                android:src="@drawable/icon_person_add_black_24" />

            <ImageView
                android:id="@+id/drop_down_option_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:src="@drawable/ic_dots" />

            <TextView
                android:id="@+id/tv_user_profile_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="Viral Android"
                android:textColor="#fff"
                android:textSize="@dimen/txt_xxxxlarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_user_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_user_profile_fullname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:text="Android free tutorials and example"
                android:textColor="#fff"
                android:textSize="@dimen/txt_large" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_profile_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="2dp"
                android:padding="12dp"
                android:text="@string/txt_login_username"
                android:textSize="@dimen/txt_large"
                android:textColor="@color/colorText" />
            <TextView
                android:id="@+id/tv_profile_role"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="2dp"
                android:padding="12dp"
                android:text="@string/txt_profile_role"
                android:textSize="@dimen/txt_large"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_profile_credit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="2dp"
                android:padding="14dp"
                android:visibility="gone"
                android:text="@string/txt_credit"
                android:textSize="@dimen/txt_large"
                android:textColor="@color/colorText"/>

            <TextView
                android:id="@+id/tv_profile_web_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="2dp"
                android:lineSpacingExtra="2sp"
                android:layout_gravity="center_vertical|end"
                android:padding="12dp"
                android:text="@string/txt_profile_web_login"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/txt_medium" />

            <TextView
                android:id="@+id/tv_profile_web_login_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/txt_profile_web_login_btn"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_xlarge" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>